--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1003,6 +1003,8 @@ height 50px
         margin-left 160px
         display block
         margin-bottom 10px
+        input
+          width 100%
       &.short1
         margin-right 20px
         .edit-product-item
@@ -1763,11 +1765,19 @@ height 50px
     margin-bottom 10px
   .table-add-product
     position relative
-    .categories-dropdown
-    .producers-dropdown
-      position static !important
-    .dropdown-menu
-      top 0
+    textarea
+      width 100%
+    .product-imageURL
+      height 185px
+      .ace-file-input
+        height 185px
+        position absolute
+        .file-label
+          border 0
+          position absolute
+          width 185px
+          height 185px
+          background-color transparent
   .products-table
     overflow-y hidden
     >table>tbody>tr
