--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1778,6 +1778,42 @@ height 50px
           width 185px
           height 185px
           background-color transparent
+    .product-imagesSet
+      .ace-file-input
+        input
+          height 0
+        .file-label
+          height 30px
+          line-height 20px
+          border 0
+          width 70%
+          margin 0 auto
+          &:before
+            font-size 14px
+            margin 0
+            color #428bca
+            font-weight normal
+        .file-name
+          display inline-block
+          vertical-align middle //
+          &:after
+            display none
+        .remove
+          z-index 100
+          width 16px
+          height 16px
+          border-width 2px
+          i
+            display block
+            font-size 10px //
+      .ace-file-input.added
+        display inline-block
+        width 60px
+        height 60px
+        margin-bottom 0
+        .file-label
+          height auto
+          width 100% //
   .products-table
     overflow-y hidden
     >table>tbody>tr
