--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -386,6 +386,8 @@ th.next
     padding 5px 10px
     background #9baab3
 
+.ui-autocomplete
+  z-index 100
 .ui-menu-item
 .ui-autocomplete-category
   list-style none
