--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -721,7 +721,7 @@ th.next,
 }
 .shop-orders .more-orders {
   text-align: center;
-  margin: 20px 0 0 0;
+  margin: 20px 0;
 }
 .shop-orders .more-orders a {
   font-size: 16px;
