--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -626,7 +626,7 @@ th.next
     //display inline-block
   .more-orders
     text-align center
-    margin 20px 0 0 0
+    margin 20px 0
     a
       font-size 16px
 
