--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -400,16 +400,17 @@ th.next
 
 .form-search
   margin-bottom 10px
-  margin-right 190px
+  margin-right 145px
 
 .producer-dropdown
   float right
   button
-    width 184px
+    width 134px
     padding 5px 9px
     .btn-group-text
-      width 148px
+      width 98px
       overflow hidden
+      text-align left
      .icon-caret-down
         position relative
         top 2px
@@ -418,7 +419,7 @@ th.next
       display inline-block
       vertical-align middle
   .dropdown-menu
-    margin-left -70px
+    margin-left -122px
 
 .shop-menu
   overflow auto
