--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -436,18 +436,19 @@ th.next,
 }
 .form-search {
   margin-bottom: 10px;
-  margin-right: 190px;
+  margin-right: 145px;
 }
 .producer-dropdown {
   float: right;
 }
 .producer-dropdown button {
-  width: 184px;
+  width: 134px;
   padding: 5px 9px;
 }
 .producer-dropdown button .btn-group-text {
-  width: 148px;
+  width: 98px;
   overflow: hidden;
+  text-align: left;
 }
 .producer-dropdown button .icon-caret-down {
   position: relative;
@@ -459,7 +460,7 @@ th.next,
   vertical-align: middle;
 }
 .producer-dropdown .dropdown-menu {
-  margin-left: -70px;
+  margin-left: -122px;
 }
 .shop-menu {
   overflow: auto;
