--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -58,15 +58,22 @@ h1 {
 .navbar .form-search .icon-search:hover {
   text-decoration: none;
 }
-.new-private-message-count {
-  width: 10px;
-  height: 7px;
-  border-radius: 5px;
+.ace-nav>li a.new-private-message-count {
+  width: 16px;
+  height: 16px;
+  min-width: 0;
+  display: inline-block;
   color: #fff;
+  font-size: 11px;
   background: #f00;
+  border: 0;
   text-align: center;
-  padding-top: 3px;
+  padding: 3px;
+  padding-top: 0;
+  border-radius: 8px;
   position: absolute;
+  top: 5px;
+  right: 4px;
   z-index: 2;
 }
 .ace-nav>li a {
