--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1298,6 +1298,16 @@ transform()
     width 100%
     display block
 
+.set-info
+  label
+    input
+      width 150px
+      display inline-block
+    span
+      display inline-block
+  .set-info-save
+    color #fff
+
 .loading
   width 150px
   height 150px
