--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1256,15 +1256,15 @@ transform()
     max-width 500px
     max-height 500px
 
-.btn-save-avatar
+.btn-back
   margin 10px 0
 
 .ui-dialog-content
   text-align center
 
 #image-for-crop
-  min-width 300px
-  min-height 300px
+  min-width 200px
+  min-height 200px
   //width auto !important
   //height auto !important
 
@@ -1278,6 +1278,9 @@ transform()
   background transparent !important
   overflow hidden
   margin 0 auto
+
+.load-avatar-error
+  padding 0 10px
 
   /* coming soon */
 .coming-soon
@@ -1300,6 +1303,7 @@ transform()
 
 .set-info
   label
+    display block
     input
       width 150px
       display inline-block
