--- a/vonline_be/war/partials/profile.changeAvatar.html
+++ b/vonline_be/war/partials/profile.changeAvatar.html
@@ -14,6 +14,7 @@
             <div style="margin-bottom:10px;">
                 <h4>Панель предварительного просмотра:</h4>
 
+                <div class="load-avatar-error error-info hidden"></div>
                 <div><img src="../i/loading.gif" alt="подождите" class="loading"/></div>
                 <div class="preview-container hidden">
                     <img id="preview" src="#"/>
