--- a/vonline_be/war/css/landing/startup.css
+++ b/vonline_be/war/css/landing/startup.css
@@ -58,6 +58,9 @@ body.index5{
 strong, b {
 	font-weight:600;
 }
+.clear{
+    clear: both;
+}
 h1 {
 	font-size:70px;
 	line-height:70px;
@@ -262,8 +265,17 @@ to {
 /*animation ends*/
 
 .logo {
-	padding: 45px 0;
-	text-align:center;
+    float: left;
+    margin-top: -60px;
+    overflow: hidden;
+    margin-bottom: 70px;
+}
+.logo span{
+    display: block;
+    font-size: 24px;
+}
+.logo img{
+    width: 300px;
 }
 .btn-large {
 	font-size:18px;
@@ -295,7 +307,7 @@ to {
 	color:#FFF!important;
 }
 .subscribe {
-	padding: 45px 0;
+	padding: 10px 0 15px 0;
     text-align: left;
     font-size: 16px;
 }
