--- a/vonline_be/war/partials/set-info.html
+++ b/vonline_be/war/partials/set-info.html
@@ -3,22 +3,22 @@
 
 <div>
 
-    <p>Укажите инфу</p>
+    <p>Для того, чтобы читать и создавать сообщения в группах "Подъезд" и "Этаж", следует указать их.</p>
 
     <label>
         <span>Подъезд</span>
-        <input type="text"/>
+        <input type="text" ng-model="setInfo.staircase"/>
     </label>
     <label>
         <span>Этаж</span>
-        <input type="text"/>
+        <input type="text" ng-model="setInfo.floor"/>
     </label>
     <label>
         <span>Квартира</span>
-        <input type="text"/>
+        <input type="text" ng-model="setInfo.flat"/>
     </label>
 
-    <p>Указывайте верную инфу</p>
+    <p>Указывайте правильные данные, иначе Вы не сможете увидеть то, что пишут Ваши соседи, а Ваши соседи не увидят то, что пишите Вы.</p>
 
     <button class="btn btn-sm no-border btn-primary set-info-save" ng-click="save()">Сохранить</button>
 
