--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1308,6 +1308,7 @@ transform()
       width 150px
       display inline-block
     span
+      width 80px
       display inline-block
   .set-info-save
     color #fff
