--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1501,6 +1501,7 @@ h1 {
   display: inline-block;
 }
 .set-info label span {
+  width: 80px;
   display: inline-block;
 }
 .set-info .set-info-save {
