--- a/vonline_be/war/partials/set-info.html
+++ b/vonline_be/war/partials/set-info.html
@@ -20,7 +20,7 @@
 
     <p>Указывайте правильные данные, иначе Вы не сможете увидеть то, что пишут Ваши соседи, а Ваши соседи не увидят то, что пишите Вы.</p>
 
-    <button class="btn btn-sm no-border btn-primary set-info-save" ng-click="save()">Сохранить</button>
+    <button class="btn btn-sm no-border btn-primary set-info-save" ng-click="setInfo.save()">Сохранить</button>
 
 </div>
 
