--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -84,8 +84,11 @@
                         </div>
 
                         <div class="home-map" ng-show="profile.isMayEdit">
-                            <!--<img src="./i/map_home.jpg" alt="карта"/>-->
-                            <img ng-src="{{ profile.map }}" alt="карта"/>
+                            <!--<img ng-src="{{ profile.map }}" alt="карта"/>-->
+                            <!--<div id="map" style="width: 400px;height: 300px"></div>-->
+                            <ya-map ya-zoom="{{profile.map.zoom}}" ya-center="{{ profile.map.center }}" ya-controls="smallMapDefaultSet" style="width: 100%; height: 400px; display: block;">
+                                <ya-geo-object ya-source="profile.map.baloon"></ya-geo-object>
+                            </ya-map>
                         </div>
 
                         <!--<div style="margin-bottom:10px;">
