--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1113,8 +1113,14 @@ transform()
           width 70px
       .nextdoor-name
           margin-left 58px
+
   .nextdoors-amount
     margin 15px 0 0 0
+  .nextdoor-address
+    clear left
+    float left
+    margin-left 58px
+    margin-top -20px
 
     /* profle */
 .user-body
