--- a/vonline_be/war/partials/neighbours.html
+++ b/vonline_be/war/partials/neighbours.html
@@ -24,6 +24,7 @@
             <div class="nextdoor-right pull-right">
                 <a href="#" ng-click="base.goToDialog(neighboor.id)" class="btn btn-sm btn-primary no-border">Написать</a>
             </div>
+            <span class="nextdoor-address">{{neighboor.address}}</span>
         </div>
 
 </div>
