--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1676,3 +1676,18 @@ h1 {
   position: absolute;
   top: -60px;
 }
+.counters .counters-menu {
+  padding-left: 0;
+  margin: 0;
+}
+.counters .counters-menu li {
+  list-style: none;
+  display: inline-block;
+}
+.counters .counters-table {
+  width: 100%;
+  margin: 10px 0;
+}
+.counters .counters-table td {
+  padding: 5px 0 5px 10px;
+}
