--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1448,5 +1448,18 @@ transform()
   position absolute
   top -60px
 
+.counters
+  .counters-menu
+    padding-left 0
+    margin 0
+    li
+      list-style none
+      display inline-block
+  .counters-table
+    width 100%
+    margin 10px 0
+    td
+     // border 1px solid #000
+      padding 5px 0 5px 10px
 
 
