--- a/vonline_be/war/partials/counters.html
+++ b/vonline_be/war/partials/counters.html
@@ -21,7 +21,7 @@
             <td>{{ counter.location }}</td>
             <td>{{ counter.prevValue }}</td>
             <td><input type="text"/></td>
-            <td>6</td>
+            <td>{{ counter.id }}</td>
         </tr>
     </table>
 
