--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1077,8 +1077,10 @@ transform()
       a
         &:hover
           text-decoration none
-    .private-message-right
-      margin-left 320px
+
+.private-message-right
+  margin-top 24px
+  color #2b7dbc
 
 .private-messages
   .private-message-single .private-message-left
