--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -73,24 +73,6 @@ transform()
     &:hover
       text-decoration none
 
-/*.new-private-message-count
-  width 16px
-  height 16px
-  min-width 0
-  display inline-block
-  color #fff
-  font-size 11px
-  background #ff0000
-  border 0
-  text-align center
-  padding 3px
-  padding-top 0
-  border-radius 8px
-  position absolute
-  top 5px
-  right 4px
-  z-index 2*/
-
 .ace-nav>li
   a
     padding 11px 12px 0 12px
@@ -147,7 +129,7 @@ transform()
     display inline-block
     vertical-align middle
     width 166px
-    &.new-private-message-count
+    &.new-message-count
       width auto
       font-size 14px
   b
